<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/panelItemBottomNav"
        android:icon="@drawable/edit_white"
        android:title="@string/panel"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/catalogCategoriesItemBottomNav"
        android:icon="@drawable/catalog_categories"
        android:title="@string/catalogCategories"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/catalogFilmsItemBottomNav"
        android:icon="@drawable/catalog_film"
        android:title="@string/catalogFilms"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/catalogActionItemBottomNav"
        android:icon="@drawable/catalog_action"
        android:title="@string/catalogAction"
        app:showAsAction="ifRoom"/>



</menu>