<?xml version="1.0" encoding="utf-8"?>


<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".tabs.PanelEditFilm"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:padding="10dp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerEditFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:textColor="@color/black"
            android:text="@string/editFilm"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditNameFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerEditFilm"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/labelEnterNameFilm"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/catalog_categories"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNameFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditNameCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/labelEnterCategory"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/sectionEditNameFilm"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/catalog_categories"
            app:startIconTint="@android:color/white"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterNameCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor" />


        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEditCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/black"
            android:text="@string/labelEditCategory"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sectionEditNameCategory"
            app:layout_constraintTop_toBottomOf="@+id/sectionEditNameFilm" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditTimeFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonEditCategory"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/labelEnterTimeFilm"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/time"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTimeFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor"/>



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterInfoFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sectionEditTimeFilm"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/labelEnterInfoFilm"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/catalog_film"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editInfoFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sectionResEditFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sectionEnterInfoFilm"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEditNameFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEditCategoryFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEditTimeFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEditFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sectionResEditFilm"
            android:layout_marginTop="20dp"
            android:text="@string/endEdit"
            android:background="@color/black"
            android:textColor="@color/blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>


