<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.TabPanel">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/addCategory"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterNameCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/headerAddCategory"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/labelEnterCategory"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/catalog_categories"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterNameCategoryadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/blue"
            android:text="@string/addCategory"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/sectionEnterNameCategory" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerAddFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/catalogFilms"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonAddCategory" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditNameCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/labelEnterCategory"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/headerAddFilm"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/catalog_categories"
            app:startIconTint="@android:color/white"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterNameCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor" />


        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEditCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/blue"
            android:text="@string/labelEditCategory"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sectionEditNameCategory"
            app:layout_constraintTop_toBottomOf="@+id/headerAddFilm" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterNameFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sectionEditNameCategory"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/labelEnterNameFilm"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/catalog_film"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterNameFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor"
                />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterInfoFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sectionEnterNameFilm"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/labelEnterInfoFilm"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/info_film"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterInfoFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterTimeFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sectionEnterInfoFilm"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/labelEnterTimeFilm"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/time_film"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterTimeFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sectionResEnterFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sectionEnterTimeFilm"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEnterNameFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/blue"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEnterCategoryFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/blue"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEnterTimeFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/blue"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sectionResEnterFilm"
            android:layout_marginTop="20dp"
            android:text="@string/addFilm"
            android:background="@color/blue"
            android:textColor="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>